this commit is for devbranch

--- a/index.html
+++ b/index.html
@@ -10,6 +10,10 @@
     
     <p>This is git tutorial</p>
     <p>iwant to edit this
+
+    </p>
+    <p>
+        this is second branch
         
     </p>
 </body>
